Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
 <h1>seqdiag_gui user guide</h1>
 
 <p>seqdiag_gui is a graphic user interface to Takeshi Komiya's simple sequence
-diagram package, called seqdiag_</p>
-
-<p>.. _seqdiag: <a href="https://bitbucket.org/tk0miya/seqdiag">https://bitbucket.org/tk0miya/seqdiag</a></p>
+diagram package, called <code>seqdiag &lt;https://bitbucket.org/tk0miya/seqdiag&gt;</code>_</p>
 
 <h1>Install</h1>
 
