Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,14 +31,12 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1></h1>
-
-<h1>seqdiag_gui user guide</h1>
+        <h1>seqdiag_gui user guide</h1>
 
 <p>seqdiag_gui is a graphic user interface to Takeshi Komiya's simple sequence
-diagram package, called <code>seqdiag &lt;https://bitbucket.org/tk0miya/seqdiag&gt;</code>_</p>
+diagram package, called <a href="https://bitbucket.org/tk0miya/seqdiag">seqdiag</a>.</p>
 
-<h1>Install</h1>
+<h2>Install</h2>
 
 <p>This package needs the following dependencies installed on your system:</p>
 
@@ -52,7 +50,7 @@ diagram package, called <code>seqdiag &lt;https://bitbucket.org/tk0miya/seqdiag&
 
 <p>This project has been tested on a system running OS X 10.8.2</p>
 
-<h1>Setup</h1>
+<h2>Setup</h2>
 
 <p>In order to run this project, you need to build it using the following
 commands::</p>
@@ -65,15 +63,15 @@ interface with the following command::</p>
 
 <p>$ bin/run</p>
 
-<h1>Create a diagram</h1>
+<h2>Create a diagram</h2>
 
 <p>TODO</p>
 
-<h1>Un-install</h1>
+<h2>Un-install</h2>
 
 <p>TODO</p>
 
-<h1>LICENSE</h1>
+<h2>LICENSE</h2>
 
 <p>TBD</p>
       </section>
