Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@ interface with the following command:</p>
 
 <p>TODO</p>
 
+<p><img src="logc.github.com/seqdiag_gui/images/vim_icon.png" alt="Test image"></p>
+
 <h2>LICENSE</h2>
 
 <p>TBD</p>
