Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -68,17 +68,35 @@ interface with the following command:</p>
 
 <h2>Create a diagram</h2>
 
-<p>TODO</p>
+<p>Let us start from a clear screen by removing all text in the edition box:</p>
+
+<p><img src="http://logc.github.com/seqdiag_gui/images/screen-01.png" alt="Step 01: cleared up"></p>
+
+<p>We can add a message between two entities by writing their names, an arrow that goes from one to the other, and a semicolon at the end of the described message. If the entities were not mentioned yet in the diagram, they are created new. Here we create two of them, 'user'  and 'interface'. We then press the 'Evaluate' button to show the following diagram:</p>
+
+<p><img src="http://logc.github.com/seqdiag_gui/images/screen-02.png" alt="Step 02: first message"></p>
+
+<p>A return value is signaled in the diagram by an arrow flowing back from one entity to another. This is written in the edition box simply inverting the arrow in a line following the first one:</p>
+
+<p><img src="http://logc.github.com/seqdiag_gui/images/screen-03.png" alt="Step 03: return value"></p>
+
+<p>If the second entity needed to call other entities to compute the return value, these messages must be listed between the original call and the return value call. Here we create a third entity ('handler') and send it a message. We obtain a return value in the same line by writing a double arrow in the edition box.</p>
+
+<p><img src="http://logc.github.com/seqdiag_gui/images/screen-04.png" alt="Step 04: nested calls"></p>
+
+<p>When you finish describing the flow of messages that make up your sequence, you can save the resulting diagram in a PNG file by pressing the 'Save' button.</p>
+
+<p>There are many more features in the seqdiag package. You can read up on them in <a href="http://blockdiag.com/en/seqdiag/index.html">its documentation</a> and end up producing something like this!</p>
+
+<p><img src="http://logc.github.com/seqdiag_gui/images/screen-05.png" alt="Step 05: complex diagram"></p>
 
 <h2>Un-install</h2>
 
-<p>TODO</p>
-
-<p><img src="logc.github.com/seqdiag_gui/images/vim_icon.png" alt="Test image"></p>
+<p>You may uninstall the application by simply removing the folder where it was installed. No external files remain.</p>
 
 <h2>LICENSE</h2>
 
-<p>TBD</p>
+<p>This program is licensed under the GPL license, v3.0. You can read all of its Terms and conditions <a href="http://www.gnu.org/licenses/gpl.html">here</a>.</p>
       </section>
     </div>
 
